--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-.vscode/
-TODO.md
+# Ignore everything
+*
+
+# Whitelisted folders/files
+!/.gitignore
+!/LICENSE.txt
+!/README.md
+!/style.css
+!/userChrome.css
+!/userContent.css
+
+!/userChrome/
+!/userChrome/**
+!/userContent/
+!/userContent/**
